--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+    import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
     import {
       getFirestore, doc, setDoc, getDoc, collection, query, where, getDocs
     } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
@@ -37,6 +38,14 @@
 
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
+    const auth = getAuth(app);
+
+    // ✅ Protect route: Redirect to login if user is not signed in
+    onAuthStateChanged(auth, (user) => {
+      if (!user) {
+        window.location.href = "login.html";
+      }
+    });
 
     const formContainer = document.getElementById("formContainer");
     document.getElementById("showAddForm").addEventListener("click", showAddPatientForm);
@@ -82,7 +91,7 @@
           <input id="medication" placeholder="Medication" />
           <textarea id="notes" placeholder="Notes"></textarea>
           <input id="consultant" placeholder="Consultant Doctor Name" />
-          <input id="referral" placeholder="Referral (optional)" /> <!-- New Field -->
+          <input id="referral" placeholder="Referral (optional)" />
           <input id="fee" placeholder="Fee" type="number" />
           <input id="due" placeholder="Due" type="number" />
           <button type="submit">Save Patient</button>
@@ -127,7 +136,7 @@
           medication: document.getElementById("medication").value,
           notes: document.getElementById("notes").value,
           consultant: document.getElementById("consultant").value,
-          referral: document.getElementById("referral").value, // Added here
+          referral: document.getElementById("referral").value,
           fee: parseFloat(document.getElementById("fee").value),
           due: parseFloat(document.getElementById("due").value),
           createdAt: new Date()
