--- a/login.html
+++ b/login.html
@@ -2,28 +2,88 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Login - Dental Dashboard</title>
   <link rel="stylesheet" href="styles.css" />
+  <style>
+    .login-wrapper {
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #f3e8ff;
+    }
+
+    .login-box {
+      background-color: #f9f5ff;
+      padding: 2.5rem;
+      border-radius: 12px;
+      box-shadow: 0 4px 14px rgba(0, 0, 0, 0.1);
+      width: 100%;
+      max-width: 400px;
+      text-align: center;
+    }
+
+    .login-box h1 {
+      font-size: 1.8rem;
+      color: #6a0dad;
+      margin-bottom: 1.5rem;
+    }
+
+    .login-box input {
+      width: 100%;
+      padding: 0.75rem;
+      margin-bottom: 1rem;
+      border: 1px solid #d3bdf0;
+      border-radius: 6px;
+      background-color: #f9f5ff;
+      font-size: 1rem;
+      color: #4d2d39;
+    }
+
+    .login-box button {
+      width: 100%;
+      padding: 0.75rem;
+      border: none;
+      background-color: #b57edc;
+      color: white;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 1.1rem;
+      transition: background-color 0.3s, transform 0.2s;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+    }
+
+    .login-box button:hover {
+      background-color: #c89ce4;
+      transform: scale(1.03);
+    }
+
+    .error {
+      color: #f87171;
+      margin-top: 0.5rem;
+      font-size: 0.9rem;
+    }
+  </style>
 </head>
-<body class="bg-gray-100 flex items-center justify-center h-screen font-sans">
-  <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-md text-center">
-    <h1 class="text-2xl font-bold text-purple-700 mb-6">Dental Dashboard Login</h1>
-    <form id="loginForm" class="space-y-4">
-      <input type="email" id="email" placeholder="Email" required class="w-full p-2 border rounded" />
-      <input type="password" id="password" placeholder="Password" required class="w-full p-2 border rounded" />
-      <button type="submit" class="bg-purple-600 hover:bg-purple-700 text-white px-6 py-2 rounded w-full">
-        Login
-      </button>
-      <p id="loginError" class="text-red-600 mt-2 hidden"></p>
-    </form>
+<body>
+  <div class="login-wrapper">
+    <div class="login-box">
+      <h1>Dental Dashboard Login</h1>
+      <form id="loginForm">
+        <input type="email" id="email" placeholder="Email" required />
+        <input type="password" id="password" placeholder="Password" required />
+        <button type="submit">Login</button>
+        <p id="loginError" class="error" style="display: none;"></p>
+      </form>
+    </div>
   </div>
 
-  <!-- Firebase compat version -->
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth-compat.js"></script>
+  <!-- Firebase SDK (modular) -->
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+    import { getAuth, signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
 
-  <script>
     const firebaseConfig = {
       apiKey: "AIzaSyA3GfQ8K_hlNSpF0aCNCtCzkC7xocQa1p0",
       authDomain: "dentaldashboard-b7244.firebaseapp.com",
@@ -34,30 +94,24 @@
       measurementId: "G-K1GMXED31S"
     };
 
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
 
-    const loginForm = document.getElementById("loginForm");
-    const loginError = document.getElementById("loginError");
+    const loginForm = document.getElementById('loginForm');
+    const loginError = document.getElementById('loginError');
 
-    loginForm.addEventListener("submit", (e) => {
+    loginForm.addEventListener('submit', async (e) => {
       e.preventDefault();
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
 
-      auth.signInWithEmailAndPassword(email, password)
-        .then(() => {
-          window.location.href = "index.html";
-        })
-        .catch((error) => {
-          loginError.textContent = "⚠️ " + error.message;
-          loginError.classList.remove("hidden");
-        });
-    });
+      const email = document.getElementById('email').value.trim();
+      const password = document.getElementById('password').value.trim();
 
-    auth.onAuthStateChanged((user) => {
-      if (user) {
+      try {
+        await signInWithEmailAndPassword(auth, email, password);
         window.location.href = "index.html";
+      } catch (error) {
+        loginError.textContent = "⚠️ " + error.message;
+        loginError.style.display = "block";
       }
     });
   </script>
